# pro-recsys-bookratingprediction-recsys-04

./: .gitignore  README.md  analizy.ipynb  base_main.py  data_share.py  ensemble.py  ensemble_search.py  feature_importance.py  kfold.py  main.py  pyproject.toml  requirements.txt  run_baseline.sh  stacking.py
config/: config_baseline.yaml
eda/: basic.ipynb  view.ipynb
eda/cleaned_data_sj/: users.csv
eda/jimin/: eda.ipynb
eda/juik/: books.ipynb  train_ratings.ipynb  users.ipynb
eda/min/: 01_EDA.ipynb  02_BOOK_EDA.ipynb  02_EDA.ipynb  03_USER_EDA.ipynb  04_TRAIN_EDA.ipynb  book_df_profile_report.html  tmp.ipynb  train_rating_df_profile_report.html  user_df_profile_report.html
eda/sojin/: clip_embedding.ipynb  data_cleaning_v1.ipynb  data_cleaning_v2.ipynb  data_cleaning_v3.ipynb  data_cleaning_v4.ipynb  eda_visualization.ipynb  language_mode_or_isbn.ipynb
src/: utils.py
src/baseline_data/: context_data.py  text_data.py  tree_data.py
src/data/: __init__.py  basic_data.py  context_data.py  image_data.py  implicit_data.py  sparse_data.py  text_data.py  vae_data.py
src/data/context/v1/: __init__.py  catboost_data.py  context_data.py  feature_build.py  preprocessing.py
src/data/context/v2/: __init__.py  catboost_data.py  feature_build.py  tmp.py
src/data/context/v3/: __init__.py  catboost_data.py  eda.ipynb  feature_build.py
src/loss/: loss.py
src/models/: CatBoost.py  DualHybridGMF.py  FM_Image.py  MF.py  MF_SVDPlus.py  NCF.py  VAE.py  XGBoost.py  __init__.py  _helpers.py
src/preprocess/: categorize.py
src/train/: catboost_trainer.py  trainer.py
(+6 files in other folders)
