[project]
name = "home"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "catboost>=1.2.1",
    "jupyter>=1.1.1",
    "nltk>=3.9.2",
    "omegaconf>=2.3.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "transformers==4.55.4",
    "wandb>=0.23.0",
]
